@@ -77,3 +77,6 @@ incremental = None
 
 # If set, print the statistics after every backup session
 print_statistics = 1
+
+# If set, use short (< 30 char) filenames for all the remote files.
+short_filenames = 0
